--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "authors": [
     "creeperyang <yangcreeper@hotmail.com>"
   ],
-  "description": "A pure JavaScript Carousel/Slider plugin that works well at Mobile/PC",
+  "description": "A pure JavaScript Carousel/Slider plugin that works well at Mobile and PC",
   "moduleType": [
     "globals"
   ],
