--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zSlider",
   "version": "0.0.1",
-  "description": "A pure JavaScript Carousel/Slider plugin that works well at Mobile/PC",
+  "description": "A pure JavaScript Carousel/Slider plugin that works well at Mobile and PC",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
