update dev dependency and rebuild; fix #3

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "zSlider",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "homepage": "https://github.com/creeperyang/zSlider",
   "authors": [
     "creeperyang <yangcreeper@hotmail.com>"
@@ -10,7 +10,7 @@
     "globals"
   ],
   "main": [
-    "dist/zSlider.js",
+    "dist/zSlider.min.js",
     "dist/zSlider.css"
   ],
   "keywords": [
